syntax = "proto3";


package postfinance.discovery.v1;

option go_package = "discoveryv1";
option java_multiple_files = true;
option java_outer_classname = "ServiceApiProto";
option java_package = "ch.postfinance.discovery.v1";

import "service.proto";
import "google/api/annotations.proto";

// ServiceAPI is responsible for registering and unregistering services.
service ServiceAPI {
  // RegisterService registers a service.
  rpc RegisterService(RegisterServiceRequest) returns (RegisterServiceResponse) {
    option (google.api.http) = {
      post: "/v1/services"
      body: "*"
    };
  }
  // UnRegisterService unregisters a service.
  rpc UnRegisterService(UnRegisterServiceRequest) returns (UnRegisterServiceResponse) {
    option (google.api.http) = {
      delete: "/v1/services/{namespace}/{id}"
    };
  }
  // ListService lists all services.
  rpc ListService(ListServiceRequest) returns (ListServiceResponse) {
    option (google.api.http) = {
      get: "/v1/services"
    };
  }
}

message RegisterServiceRequest {
  string name = 1;
  string endpoint = 2;
  map<string, string> labels = 3;
  string description = 4;
  string namespace = 5;
  string selector = 6;
}

message RegisterServiceResponse {
  Service service = 1;
}

message UnRegisterServiceRequest {
  string id = 1;
  string namespace = 2;
}

message UnRegisterServiceResponse {
}

message ListServiceRequest {
  string namespace = 1;
}

message ListServiceResponse {
  repeated Service services = 1;
}
